# Kwylock

./: Cargo.toml  README.md
.github/workflows/: ci.yml
crates/common/: Cargo.toml
crates/common/src/: config.rs  ipc.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: lib.rs
crates/daemon/src/adapters/: auth.rs  ipc.rs  logind.rs  mod.rs
crates/daemon/src/app/: config.rs  mod.rs  run.rs  ui_process.rs
crates/daemon/src/domain/: auth_guard.rs  lock_state.rs  mod.rs
crates/ui/: Cargo.toml
crates/ui/assets/: style.css
crates/ui/src/: app.rs  ipc.rs  main.rs  state.rs  style.rs  ui.rs
