[package]
name = "kwylock-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Kwylock daemon orchestrating lock state and UI"
publish = false

[dependencies]
anyhow = "1.0"
dbus = "0.9"
kwylock-common = { path = "../common" }
libc = "0.2"
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
